--- a/footer.html
+++ b/footer.html
@@ -96,9 +96,9 @@
 
         <form class="form">
             <label for="fname">First Name:</label>
-            <input type="text" id="fname" placeholder="Eg: John">
+            <input type="text" id="fname" placeholder="Eg: Garvit">
             <label for="lname">Surname</label>
-            <input type="text" id="lname" placeholder="Doe">
+            <input type="text" id="lname" placeholder="Bhartia">
             <label for="address">Your mail</label>
             <input type="text" id="Email"><br><br>
             <label for="school">Message</label>
